Switch to displaying homepage below profile (fixes overflow issue)

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1222,6 +1222,11 @@ textarea.highlight {
   margin: 5px;
 }
 
+.profile-main a {
+  display: block;
+  margin: 10px 0;
+}
+
 /* record show */
 
 .record-main, .record-sidebar, .show-comments {
